all.css
/* GENERAL  */
body {
  font-family: "futura-pt", sans-serif;
  font-weight: 500;
  font-style: normal;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
}
a {
  text-decoration: none;
  color: inherit;
}
li {
  list-style: none;  
}

/* HEADER  */
header {
  height: 50px;
  width: 100%;
  padding-top: 2vh;
  display: flex;
  position: fixed;
  top: 0;
  justify-content: space-between;
  align-items: flex-end;
}
.corner-logo {
  height: 100%;
  flex: 1;
  display: flex;
  justify-content: flex-start;
  align-items: flex-end;
  border-bottom: 3px solid #222426;
}
.corner-logo img {
  height: 5vh;
  position: relative;
  left: 5px;
  bottom: -1px;
  display: flex;
}
.header {
  display: flex;
  justify-content: center;
  flex: 1;
  border-bottom: 3px solid #222426;
}
.header span {
  font-family: "futura-pt", sans-serif;
  font-weight: 100;
  font-style: italic;
  font-size: 2rem;
  color: #222426;
}
#burger-pop {
  height: 100%;
  width: 100%;
  padding-top: 25%;
  display: flex;
  flex-direction: column;
  position: fixed;
  background-color: white;
}
#burger-pop ul {
  display: flex;
  flex-direction: column;
  gap: 20px;
}
#burger-pop li {
  font-size: 3rem;
  padding-left: 5%;
  text-align: left;
  margin-left: 5%;
  letter-spacing: 5px;
  border-bottom-left-radius: 5px;
  border-top-left-radius: 5px;
  border-left: #222426 10px solid;
  color: white;
  box-shadow: inset 0 0 0 1000px #22242699;
}
.burger-sm {
  height: 20%;
  width: 100%;
  display: flex;
  justify-content: flex-end;
  align-items: flex-start;
}
.burger-sm img {
  padding: 18px;
  height: 7vh;
}
.menu-btn {
  display: flex;
  justify-content: flex-end;
  position: relative;
  top: -8px;
  right: 5px;
  flex: 1;
  width: 50px;
  height: 20px;
  cursor: pointer;
  transition: all .5s ease-in-out;
}
.menu-btn__burger {
  width: 40px;
  height: 6px;
  background: #D97941;
  border-radius: 5px;
  transition: all .5s ease-out;
}
.menu-btn__burger::before,
.menu-btn__burger::after {
  content: '';
  position: absolute;
  width: 35px;
  height: 6px;
  background: #222426;
  border-radius: 5px;
  /* box-shadow: 0 2px 5px rgba(255,101,47,.2); */
  transition: all .5s ease-in-out;
}
.menu-btn__burger::before {
  transform: translateY(-16px);
}
.menu-btn__burger::after {
  transform: translateY(16px);
}
/* ANIMATION */
.menu-btn.open .menu-btn__burger {
  transform: translateX(-50px);
  background: transparent;
  box-shadow: none;
}
.menu-btn.open .menu-btn__burger::before {
  transform: rotate(45deg) translate(35px, -35px);
}
.menu-btn.open .menu-btn__burger::after {
  transform: rotate(-45deg) translate(35px, 35px);
}

/* PRELOADER  */
#preloader {
  z-index: 101;
  background-color: white;
  height: 100vh;
  width: 100%;
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
} 
#preloader img {
  height: 5vh;
}

footer {
  height: 70px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: white;
  background: #a6a6a6;
}
.left {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  font-size: .8rem;
  color: #222426;
}
.middle {
  flex: 1;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}
.right {
  display: flex;
  justify-content: center;
  text-align: center;
  flex: 1;
  color: #222426;
}
.left img {
  height: 4vh;
}

